<?xml version="1.0" encoding="utf-8"?>
<!-- 
Copyright 2014 Sheldon Neilson www.neilson.co.za

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <com.example.ali.shiva.CustomTextView3
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.example.ali.shiva.CustomTextView3
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="mini"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/mute_volume"
            android:id="@+id/floatingActionButtonmutealer" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.example.ali.shiva.CustomButton
            android:id="@+id/Button1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:tag="1"
            android:text="@string/_1" />

        <com.example.ali.shiva.CustomButton
            android:id="@+id/Button2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:tag="2"
            android:text="@string/_2" />

        <com.example.ali.shiva.CustomButton
            android:id="@+id/Button3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:tag="3"
            android:text="@string/_3" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.example.ali.shiva.CustomButton
            android:id="@+id/Button4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:tag="4"
            android:text="@string/_4" />

        <com.example.ali.shiva.CustomButton
            android:id="@+id/Button5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:tag="5"
            android:text="@string/_5" />

        <com.example.ali.shiva.CustomButton
            android:id="@+id/Button6"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:tag="6"
            android:text="@string/_6" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.example.ali.shiva.CustomButton
            android:id="@+id/Button7"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:tag="7"
            android:text="@string/_7" />

        <com.example.ali.shiva.CustomButton
            android:id="@+id/Button8"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:tag="8"
            android:text="@string/_8" />

        <com.example.ali.shiva.CustomButton
            android:id="@+id/Button9"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:tag="9"
            android:text="@string/_9" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.example.ali.shiva.CustomButton
            android:id="@+id/Button_decimal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:tag="."
            android:text="@string/decimal_button_text" />

        <com.example.ali.shiva.CustomButton
            android:id="@+id/Button0"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:tag="0"
            android:text="@string/_0" />

        <com.example.ali.shiva.CustomButton
            android:id="@+id/Button_minus"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:tag="-"
            android:text="@string/minus_button_text" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <com.example.ali.shiva.CustomButton
            android:id="@+id/Button_clear"
            android:layout_width="0dp"
            android:background="@color/primary_dark"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="clear"
            android:text="پاک کردن" />

    </TableRow>

</TableLayout>