<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ali.shiva.FragmentSetp3">

  <ScrollView
      android:layout_width="match_parent"
      android:background="@drawable/gradiant_msg"
      android:id="@+id/ssss3"
      android:layout_height="match_parent">
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">
          <com.example.ali.shiva.CustomTextView2
              android:layout_width="wrap_content"
              android:text="@string/setup3"
              android:id="@+id/ttr6"
              android:layout_marginRight="8dp"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="20dp"
              android:textSize="13dp"
              android:textStyle="bold"
              android:textDirection="rtl"
              android:padding="4dp"
              android:textColor="@color/black"
              android:layout_height="wrap_content" />
          <ScrollView
              android:layout_width="match_parent"
              android:layout_below="@id/ttr6"
              android:id="@+id/ttr7"
              android:layout_marginTop="8dp"
              android:layout_height="wrap_content">
              <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
                  <RelativeLayout
                      android:layout_width="match_parent"
                      android:layout_marginTop="3dp"
                      android:id="@+id/afradeh1"
                      android:layout_height="wrap_content">
                      <com.example.ali.shiva.CustomTextView3
                          android:layout_width="wrap_content"
                          android:text="@string/type1"
                          android:textColor="@color/black"
                          android:textSize="14dp"
                          android:layout_alignParentLeft="true"
                          android:layout_marginRight="65dp"
                          android:padding="10dp"
                          android:layout_height="wrap_content" />
                      <ImageView
                          android:layout_width="35dp"
                          android:src="@drawable/check"
                          android:id="@+id/imgafrade1"
                          android:layout_marginTop="8dp"
                          android:layout_alignParentRight="true"
                          android:layout_marginRight="5dp"
                          android:padding="4dp"
                          android:visibility="invisible"
                          android:layout_height="35dp" />
                  </RelativeLayout>
                  <RelativeLayout
                      android:layout_width="match_parent"
                      android:layout_marginTop="5dp"
                      android:layout_below="@id/afradeh1"
                      android:id="@+id/afradeh2"
                      android:layout_height="wrap_content">
                      <com.example.ali.shiva.CustomTextView3
                          android:layout_width="wrap_content"
                          android:text="@string/type2"
                          android:textColor="@color/black"
                          android:textSize="14dp"
                          android:layout_alignParentLeft="true"
                          android:layout_marginRight="65dp"
                          android:padding="10dp"
                          android:layout_height="wrap_content" />
                      <ImageView
                          android:layout_width="35dp"
                          android:src="@drawable/check"
                          android:id="@+id/imgafrade2"
                          android:layout_marginTop="8dp"
                          android:layout_alignParentRight="true"
                          android:layout_marginRight="5dp"
                          android:padding="4dp"
                          android:visibility="invisible"
                          android:layout_height="35dp" />
                  </RelativeLayout>
                  <!--<RelativeLayout-->
                      <!--android:layout_width="match_parent"-->
                      <!--android:layout_marginTop="5dp"-->
                      <!--android:layout_below="@id/afradeh2"-->
                      <!--android:id="@+id/afradeh3"-->
                      <!--android:layout_height="wrap_content">-->
                      <!--<com.example.ali.shiva.CustomTextView3-->
                          <!--android:layout_width="wrap_content"-->
                          <!--android:text="@string/type3"-->
                          <!--android:textColor="@color/black"-->
                          <!--android:textSize="14dp"-->
                          <!--android:layout_alignParentLeft="true"-->
                          <!--android:layout_marginRight="65dp"-->
                          <!--android:padding="10dp"-->
                          <!--android:layout_height="wrap_content" />-->
                      <!--<ImageView-->
                          <!--android:layout_width="35dp"-->
                          <!--android:src="@drawable/check"-->
                          <!--android:id="@+id/imgafrade3"-->
                          <!--android:layout_alignParentRight="true"-->
                          <!--android:layout_marginRight="5dp"-->
                          <!--android:padding="4dp"-->
                          <!--android:visibility="invisible"-->
                          <!--android:layout_marginTop="15dp"-->
                          <!--android:layout_height="35dp" />-->
                  <!--</RelativeLayout>-->

                  <!--<RelativeLayout-->
                      <!--android:layout_width="match_parent"-->
                      <!--android:layout_marginTop="5dp"-->
                      <!--android:layout_below="@id/afradeh3"-->
                      <!--android:id="@+id/afradeh4"-->
                      <!--android:layout_height="wrap_content">-->
                      <!--<com.example.ali.shiva.CustomTextView3-->
                          <!--android:layout_width="wrap_content"-->
                          <!--android:text="@string/type4"-->
                          <!--android:textColor="@color/black"-->
                          <!--android:textSize="14dp"-->
                          <!--android:layout_alignParentLeft="true"-->
                          <!--android:layout_marginRight="65dp"-->
                          <!--android:padding="10dp"-->
                          <!--android:layout_height="wrap_content" />-->
                      <!--<ImageView-->
                          <!--android:layout_width="35dp"-->
                          <!--android:src="@drawable/check"-->
                          <!--android:id="@+id/imgafrade4"-->
                          <!--android:layout_alignParentRight="true"-->
                          <!--android:layout_marginRight="5dp"-->
                          <!--android:padding="4dp"-->
                          <!--android:visibility="invisible"-->
                          <!--android:layout_marginTop="15dp"-->
                          <!--android:layout_height="35dp" />-->
                  <!--</RelativeLayout>-->
                  <RelativeLayout
                      android:layout_width="match_parent"
                      android:layout_marginTop="5dp"
                      android:layout_below="@id/afradeh2"
                      android:id="@+id/afradeh5"
                      android:layout_height="wrap_content">
                      <com.example.ali.shiva.CustomTextView3
                          android:layout_width="wrap_content"
                          android:text="@string/type5"
                          android:textColor="@color/black"
                          android:textSize="14dp"
                          android:layout_alignParentLeft="true"
                          android:layout_marginRight="65dp"
                          android:padding="10dp"
                          android:layout_height="wrap_content" />
                      <ImageView
                          android:layout_width="35dp"
                          android:src="@drawable/check"
                          android:id="@+id/imgafrade5"
                          android:layout_alignParentRight="true"
                          android:layout_marginRight="5dp"
                          android:padding="4dp"
                          android:visibility="invisible"
                          android:layout_marginTop="5dp"
                          android:layout_height="35dp" />
                  </RelativeLayout>

              </RelativeLayout>

          </ScrollView>


      </RelativeLayout>
  </ScrollView>

</FrameLayout>
